code25_all/lua/27136335.txt
In file included from lua.h:16:0,
                 from luac.c:15:
luaconf.h:553:27: error: expected identifier or ‘(’ before numeric constant
 #define isalnum(zeich) (((0x80&zeich)||isalnum(zeich))&&zeich!=-1)
                           ^
luaconf.h:553:38: error: expected ‘)’ before ‘||’ token
 #define isalnum(zeich) (((0x80&zeich)||isalnum(zeich))&&zeich!=-1)
                                      ^
luaconf.h:553:55: error: expected ‘)’ before ‘&&’ token
 #define isalnum(zeich) (((0x80&zeich)||isalnum(zeich))&&zeich!=-1)
                                                       ^
luaconf.h:550:27: error: expected identifier or ‘(’ before numeric constant
 #define isalpha(zeich) (((0x80&zeich)||isalpha(zeich))&&zeich!=-1)
                           ^
luaconf.h:550:38: error: expected ‘)’ before ‘||’ token
 #define isalpha(zeich) (((0x80&zeich)||isalpha(zeich))&&zeich!=-1)
                                      ^
luaconf.h:550:55: error: expected ‘)’ before ‘&&’ token
 #define isalpha(zeich) (((0x80&zeich)||isalpha(zeich))&&zeich!=-1)
                                                       ^
luaconf.h:555:26: error: expected identifier or ‘(’ before ‘!’ token
 #define isdigit(zeich) ((!(0x80&zeich)&&isdigit(zeich))&&zeich!=-1)
                          ^
luaconf.h:555:56: error: expected ‘)’ before ‘&&’ token
 #define isdigit(zeich) ((!(0x80&zeich)&&isdigit(zeich))&&zeich!=-1)
                                                        ^
luaconf.h:558:26: error: expected identifier or ‘(’ before ‘!’ token
 #define isspace(zeich) ((!(0x80&zeich)&&isspace(zeich))&&zeich!=-1)
                          ^
luaconf.h:558:56: error: expected ‘)’ before ‘&&’ token
 #define isspace(zeich) ((!(0x80&zeich)&&isspace(zeich))&&zeich!=-1)
                                                        ^
 <builtin>: recipe for target 'luac.o' failed

